[package]
name = "rs_nes"
version = "0.0.1"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]

[features]
default = []
native_client = ["sdl2"]

[dependencies]
rs-nes-macros = { path = "rs-nes-macros" }
cpu6502 = { git = "https://github.com/bgourlie/cpu6502" }
sdl2 = { git = "https://github.com/bgourlie/rust-sdl2", branch = "sdl-upgrade", features = ["bundled", "static-link"], optional = true }

[dev-dependencies]
asm6502 = {version = "^0.1.2"}
rand = "*"
time = "*"

[[bin]]
name = "native_client"
required-features = ["native_client"]

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false
