[package]
name = "rs-nes-macros"
version = "0.0.1"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
tera = "^0.11.8"
proc-macro2 = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
quote = "^0.6"
syn = { version = "^0.14", default-features = false, features = ["full", "parsing", "proc-macro"] }
