[package]
name = "rs-nes-renderer"
version = "0.1.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
env_logger = "^0.5"
log = "^0.4"
winit = "^0.18"
glsl-to-spirv = "^0.1.4"
gfx-hal = "^0.1.0"
gfx-backend-empty = "^0.1.0"
rs_nes = { path = "../rs-nes" }

[dependencies.gfx-backend-gl]
version = "^0.1.0"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "^0.1.0"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "^0.1.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "^0.1.0"
optional = true
