[package]
name = "rs_nes"
version = "0.0.1"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"

[features]
default = []
native_client = ["sdl2"]

[dependencies]
# TODO: nes-rom-loader which was lifted from this repo
rs-nes-macros = { path = "../rs-nes-macros" }
cpu6502 = { path = "../cpu6502" }
byteorder = "^1.2.3"
sdl2 = { version = "^0.32.1", features = ["bundled", "static-link"], optional = true }

[dev-dependencies]
asm6502 = {version = "^0.1.2"}
rand = "*"
time = "*"
criterion = "^0.2"

[[bin]]
name = "native_client"
required-features = ["native_client"]

[[bench]]
name = "render_benchmark"
harness = false